fx 1.5.0.7 released. some layout bug fix.
git-svn-id: http://svn.openfoundry.org/moztw@530 9cc691a1-34e3-0310-a474-e8860ed5959b

--- a/css/moztw.css
+++ b/css/moztw.css
@@ -31,7 +31,7 @@ acronym {
 .download li {
 	padding: 1px;
 	margin: 1px;
-	height: 20px;
+	height: auto;
 }
 
 .download a.preselected {
